modify authentication and add bank
