# resource/middleware/authentication.js
@@ -1,5 +1,6 @@
 const { verifyJwtToken } = require("../helper/global-func");
 const { AuthUserModel } = require("../models/auth");
+const { RolesModel } = require("../models/roles");
 const { UnauthenticatedError } = require("../utils/errors");
 const NotFound = require("../utils/errors/not-found");
 
@@ -7,8 +8,8 @@ const AuthorizeUserLogin = async (req, res, next) => {
   try {
     // get JWT token from header
     const authHeader =
-      req.headers.authorization.split(" ")[
-        req.headers.authorization.split(" ").length - 1
+      req.headers.authorization?.split(" ")[
+        req.headers.authorization?.split(" ").length - 1
       ];
 
     // send error Token not found
@@ -20,6 +21,11 @@ const AuthorizeUserLogin = async (req, res, next) => {
     // check email is register on database
     const verifyData = await AuthUserModel.findOne({
       where: { email: dataValid.email },
+      attributes: ["id", "username"],
+      include: {
+        model: RolesModel,
+        attributes: ["role_name"],
+      },
     });
 
     // send error not found, if data not register
@@ -30,7 +36,11 @@ const AuthorizeUserLogin = async (req, res, next) => {
     delete dataValid.exp;
     delete dataValid.jti;
 
-    req.login = { ...dataValid };
+    req.login = {
+      id: verifyData.id,
+      ...dataValid,
+      ...verifyData.role.toJSON(),
+    };
     // next to controller
     next();
   } catch (err) {
