# resource/schema/auth.js
@@ -1,7 +1,14 @@
 const { AuthUserModelDefine } = require("../models/auth");
+const { OrganizerModelDefine } = require("../models/organizer");
 
 const AuthUserSchema = {
   BodyAuthUserSchema: AuthUserModelDefine,
+  BodyAuthSigninSchema: {
+    email: "example@gmail.com",
+    password: "example secret",
+  },
+  BodyOrganizerSchema: OrganizerModelDefine,
+
   QueryAuthUserSchema: {
     email: AuthUserModelDefine.email,
   },
