# resource/schema/bank.js
@@ -1,0 +1,7 @@
+const { BankModelDefine } = require("../models/bank");
+
+const BankSchema = {
+  BodyBankSchema: BankModelDefine,
+};
+
+module.exports = BankSchema;
