# swagger-output.json
@@ -59,7 +59,7 @@
             "in": "body",
             "description": "Create role",
             "schema": {
-              "$ref": "#/definitions/BodyAuthUserSchema"
+              "$ref": "#/definitions/BodyAuthSigninSchema"
             }
           }
         ],
@@ -68,6 +68,67 @@
             "description": ""
           }
         }
+      }
+    },
+    "/auth/submision": {
+      "post": {
+        "tags": [
+          "Master Role"
+        ],
+        "summary": "role user",
+        "description": "every user has role for access",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Create role",
+            "schema": {
+              "$ref": "#/definitions/BodyOrganizerSchema"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/auth/verify/{id}": {
+      "put": {
+        "tags": [
+          "Master Role"
+        ],
+        "summary": "role user",
+        "description": "every user has role for access",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/category/": {
@@ -276,6 +337,112 @@
           }
         ]
       }
+    },
+    "/bank/": {
+      "get": {
+        "tags": [
+          "MASTER BANK"
+        ],
+        "summary": "filter every campaign",
+        "description": "this for filter campaign using category fundraising",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "MASTER BANK"
+        ],
+        "summary": "filter every campaign",
+        "description": "this for filter campaign using category fundraising",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Create role",
+            "schema": {
+              "$ref": "#/definitions/BodyBankSchema"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/bank/{id}": {
+      "put": {
+        "tags": [
+          "MASTER BANK"
+        ],
+        "summary": "filter every campaign",
+        "description": "this for filter campaign using category fundraising",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Create role",
+            "schema": {
+              "$ref": "#/definitions/BodyBankSchema"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "MASTER BANK"
+        ],
+        "summary": "filter every campaign",
+        "description": "this for filter campaign using category fundraising",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
   },
   "definitions": {
@@ -297,8 +464,38 @@
         "phone_number": {
           "type": "string",
           "example": "example secret"
+        }
+      }
+    },
+    "BodyAuthSigninSchema": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "example@gmail.com"
         },
-        "role_id": {}
+        "password": {
+          "type": "string",
+          "example": "example secret"
+        }
+      }
+    },
+    "BodyOrganizerSchema": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "admin"
+        },
+        "address": {
+          "type": "string",
+          "example": "jl.raya kampung rambutan"
+        },
+        "contact_person": {},
+        "email": {
+          "type": "string",
+          "example": "admin@gmail.com"
+        }
       }
     },
     "QueryAuthUserSchema": {
@@ -325,6 +522,28 @@
         "role_name": {
           "type": "string",
           "example": "admin"
+        }
+      }
+    },
+    "BodyBankSchema": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "admin"
+        },
+        "bank_code": {
+          "type": "string",
+          "example": "admin"
+        },
+        "address": {
+          "type": "string",
+          "example": "jl. bank borneo"
+        },
+        "contact_number": {},
+        "email": {
+          "type": "string",
+          "example": "adminbank@gmail.com"
         }
       }
     },
